Chaps Analyse 1D et 2D, repartition. Analyse 1D structure générale et figures

--- a/main.tex
+++ b/main.tex
@@ -8,13 +8,17 @@
 \usepackage{booktabs}
 %\usepackage{tablefootnote}
 \usepackage{threeparttable}
-%Fancy headers
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\fancyhead[LE,RO]{\thepage}
-\fancyhead[LO]{\rightmark}
-\fancyhead[RE]{\leftmark}
+%\pagestyle{ThesisHeadings}
+\pagestyle{ThesisHeadings}
+\setlength{\HeadRuleWidth}{0.4pt}
+% %Fancy headers
+% % \usepackage{fancyhdr}
+% %\pagestyle{Fancy}
+% %fancyhf{}
+% \OddHead[LE,RO]{{\thepage}{}}
+% \EvenHead[LE,RO]{\thepage}
+% % \fancyhead[LO]{\rightmark}
+% % \fancyhead[RE]{\leftmark}
 
 %mini table of contents
 \usepackage[french]{minitoc}
@@ -44,7 +48,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-\addbibresource{./Biblio/biblio.bib}
+%\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
@@ -69,9 +73,10 @@
 \subfile{03-SOM/source}
 \subfile{04-Representation/source}
 \subfile{05-Indicateur/source}
+\subfile{07-Relaxation/source}
 \subfile{06-Analyse/source}
 \subfile{06b-Analyse-2D/source}
-\subfile{07-Relaxation/source}
+
 %\subfile{08-Application/source}
 \subfile{Conclusion}
 %Bibliography files
